# jetson

./: .gitignore  README.md
camera/: csi_camera.py  gst_info.txt  gst_inspect.sh  gst_mode_0.sh  gst_mode_4.sh  usb_camera.py
inputs/: get_key.py  get_mouse.py  jstest.py  list_devices.py
jetbot/: forward.py  slow_fw.py
jupyter/: teleoperation.ipynb
motor/: backward.py  forward.py  fw_bw.py  left.py  right.py
nvdli-nano/hello_camera/: csi_output.txt  usb_camera.py
nvidia/: 5w_power.sh  maxn_power.sh  show_power_mode.sh
oled/: i2c_detect.sh  srvc_start.sh  srvc_stop.sh  stats.py
opencv101/: CMakeLists.txt  mat3.cpp  mat4.cpp  mat5.cpp  mat6.cpp
opencv101/builds/: hello  mat1  mat2  mat3  mat4  mat5  mat6
opencv101/src/: hello.cpp  mat1.cpp  mat2.cpp
pi_oled/: clear.py  hello.py
utils/: teleoperations.py
